--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Title</title>
 </head>
 <body>
-    <form action="https://formsubmit.co/pallodrushikesh75@email.com" method="POST">
+    <form action="https://formsubmit.co/pallodrushikesh75@gmail.com" method="POST">
         <input type="text" name="name" required>
         <input type="email" name="email" placeholder="Email Address">
         <input type="hidden" name="_next" value="/thanks.html">
