--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Title</title>
 </head>
 <body>
-    <form action="https://formsubmit.co/pallodrushikesh75@email.com" method="POST">
+    <form action="https://formsubmit.co/pallodrushikesh75@gmail.com" method="POST">
         <input type="text" name="name" required>
         <input type="email" name="email" placeholder="Email Address">
-        <input type="hidden" name="_next" value="/thanks.html">
+        <input type="hidden" name="_next" value="https://pallodrushi75.github.io/testingcontact/thanks.html">
         <button type="submit">Send</button>
    </form>
 
